// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test getOne crud function Get one 1`] = `
Object {
  "createdAt": Any<Date>,
  "id": 10,
  "name": "nameC",
  "post_create": 0,
  "post_delete": 0,
  "post_read": 0,
  "post_update": 0,
  "role_create": 0,
  "role_delete": 0,
  "role_read": 0,
  "role_update": 0,
  "updatedAt": null,
  "user_create": 0,
  "user_delete": 0,
  "user_read": 0,
  "user_update": 0,
}
`;

exports[`Test getOne crud function Get one with relations 1`] = `
Object {
  "createdAt": Any<Date>,
  "id": 10,
  "name": "nameC",
  "post_create": 0,
  "post_delete": 0,
  "post_read": 0,
  "post_update": 0,
  "role_create": 0,
  "role_delete": 0,
  "role_read": 0,
  "role_update": 0,
  "updatedAt": null,
  "user": Array [
    Object {
      "createdAt": Any<Date>,
      "id": 100,
      "loggedInAt": null,
      "roleId": 10,
      "updatedAt": null,
      "username": "Relation User",
    },
  ],
  "user_create": 0,
  "user_delete": 0,
  "user_read": 0,
  "user_update": 0,
}
`;
